# AgenticTrading

./: dashboard.py  pyproject.toml  requirements.txt  streamlit_app.py
FinAgents/agent_pools/alpha_agent_pool/agents/autonomous/workspace/: autonomous_strategy_flow.json  generated_tool_2e71a053.py  generated_tool_37e61460.py  generated_tool_3904afc5.py  generated_tool_53441788.py  generated_tool_683fb9ed.py  generated_tool_72bc448d.py  generated_tool_dc21ccc5.py  generated_tool_f763af5c.py  task_log.json  validation_30098431.py  validation_596924cc.py
FinAgents/agent_pools/alpha_agent_pool/schema/: theory_driven_schema.py
examples/: autonomous_agent_example.py
