[project]
name = "finagent-orchestration"
version = "0.1.0"
description = "FinAgent orchestration framework and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.4",
    "mcp[cli]>=1.9.1",
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "openai",
    "python-dotenv",
    "neo4j",
]
